--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>4.3.5.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
 
 
     </dependencies>
